// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the AddStateModal when button is pressed: AddStateModal 1`] = `
<div
  aria-labelledby="add-state-modal-title"
  class="modal is-active"
  role="dialog"
>
  <div
    class="modal-background"
  />
  <div
    class="modal-card"
  >
    <header
      class="modal-card-head"
    >
      <p
        class="modal-card-title"
        id="add-state-modal-title"
      >
        Add State
      </p>
      <button
        aria-label="close"
        class="delete"
      />
    </header>
    <section
      class="modal-card-body"
    >
      <div
        class="field"
      >
        <label
          class="label"
        >
          Name:
        </label>
        <div
          class="control"
        >
          <input
            class="input is-danger"
            type="text"
            value=""
          />
        </div>
        <p
          class="help is-danger"
        >
          Name is required.
        </p>
      </div>
    </section>
    <footer
      class="modal-card-foot"
    >
      <div
        class="buttons"
      >
        <button
          class="button"
        >
          Close
        </button>
        <button
          class="button is-success"
          disabled=""
        >
          Add State
        </button>
      </div>
    </footer>
  </div>
</div>
`;

exports[`should render the sorted states: Default Kanban Page 1`] = `
<div>
  <section
    class="container"
  >
    <nav
      aria-label="main navigation"
      class="navbar"
      role="navigation"
    >
      <div
        class="navbar-brand"
      >
        <a
          class="navbar-item"
          href="/"
        >
          <img
            alt="Logo"
            data-nimg="1"
            decoding="async"
            height="28"
            loading="lazy"
            src="/admios-logo.svg"
            style="color: transparent;"
            width="112"
          />
        </a>
        <a
          aria-expanded="false"
          aria-label="menu"
          class="navbar-burger"
          data-target="main-navbar-inner"
          role="button"
        >
          <span
            aria-hidden="true"
          />
          <span
            aria-hidden="true"
          />
          <span
            aria-hidden="true"
          />
        </a>
      </div>
      <div
        class="navbar-menu"
        id="main-navbar-inner"
      >
        <div
          class="navbar-start"
        >
          <a
            class="navbar-item"
            href="/"
          >
            My Boards
          </a>
          <a
            class="navbar-item"
          >
            Add State
          </a>
        </div>
        <div
          class="navbar-end"
        >
          <div
            class="navbar-item"
          >
            Username: 
            test
          </div>
          <a
            class="navbar-item"
          >
            Logout
          </a>
        </div>
      </div>
    </nav>
    <div
      class="columnList content"
    >
      <section
        class="card container"
        style="--column-color: blue;"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title"
          >
            In progress
          </p>
        </header>
        <div
          class="card-content cardContent"
        />
        <footer
          class="card-footer"
        >
          <a
            class="card-footer-item"
          >
            Add task
          </a>
        </footer>
      </section>
      <section
        class="card container"
        style="--column-color: green;"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title"
          >
            Done
          </p>
        </header>
        <div
          class="card-content cardContent"
        />
        <footer
          class="card-footer"
        >
          <a
            class="card-footer-item"
          >
            Add task
          </a>
        </footer>
      </section>
      <section
        class="card container"
        style="--column-color: red;"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title"
          >
            To do
          </p>
        </header>
        <div
          class="card-content cardContent"
        />
        <footer
          class="card-footer"
        >
          <a
            class="card-footer-item"
          >
            Add task
          </a>
        </footer>
      </section>
    </div>
    <div
      aria-labelledby="add-state-modal-title"
      class="modal"
      role="dialog"
    >
      <div
        class="modal-background"
      />
      <div
        class="modal-card"
      >
        <header
          class="modal-card-head"
        >
          <p
            class="modal-card-title"
            id="add-state-modal-title"
          >
            Add State
          </p>
          <button
            aria-label="close"
            class="delete"
          />
        </header>
        <section
          class="modal-card-body"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              Name:
            </label>
            <div
              class="control"
            >
              <input
                class="input is-danger"
                type="text"
                value=""
              />
            </div>
            <p
              class="help is-danger"
            >
              Name is required.
            </p>
          </div>
        </section>
        <footer
          class="modal-card-foot"
        >
          <div
            class="buttons"
          >
            <button
              class="button"
            >
              Close
            </button>
            <button
              class="button is-success"
              disabled=""
            >
              Add State
            </button>
          </div>
        </footer>
      </div>
    </div>
    <div
      aria-labelledby="add-task-modal-title"
      class="modal"
      role="dialog"
    >
      <div
        class="modal-background"
      />
      <div
        class="modal-card"
      >
        <header
          class="modal-card-head"
        >
          <p
            class="modal-card-title"
            id="add-task-modal-title"
          >
            Add Task
          </p>
          <button
            aria-label="close"
            class="delete"
          />
        </header>
        <section
          class="modal-card-body"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              Name:
            </label>
            <div
              class="control"
            >
              <input
                class="input"
                type="text"
                value=""
              />
            </div>
            <p
              class="help is-danger"
            >
              Task is required.
            </p>
          </div>
        </section>
        <footer
          class="modal-card-foot"
        >
          <div
            class="buttons"
          >
            <button
              class="button"
            >
              Close
            </button>
            <button
              class="button is-success"
              disabled=""
            >
              Add Task
            </button>
          </div>
        </footer>
      </div>
    </div>
    <div
      aria-labelledby="edit-task-modal-title"
      class="modal"
      role="dialog"
    >
      <div
        class="modal-background"
      />
      <div
        class="modal-card"
      >
        <header
          class="modal-card-head"
        >
          <p
            class="modal-card-title"
            id="edit-taskmodal-title"
          >
            Edit Task
          </p>
          <button
            aria-label="close"
            class="delete"
          />
        </header>
        <section
          class="modal-card-body"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              Name:
            </label>
            <div
              class="control"
            >
              <input
                class="input"
                type="text"
                value=""
              />
            </div>
            <p
              class="help is-danger"
            >
              Text is required.
            </p>
          </div>
        </section>
        <footer
          class="modal-card-foot"
        >
          <div
            class="buttons"
          >
            <button
              class="button"
            >
              Close
            </button>
            <button
              class="button is-success"
              disabled=""
            >
              Edit Task
            </button>
          </div>
        </footer>
      </div>
    </div>
  </section>
</div>
`;

exports[`should render when empty: Empty Kanban Page 1`] = `
<div>
  <section
    class="container"
  >
    <nav
      aria-label="main navigation"
      class="navbar"
      role="navigation"
    >
      <div
        class="navbar-brand"
      >
        <a
          class="navbar-item"
          href="/"
        >
          <img
            alt="Logo"
            data-nimg="1"
            decoding="async"
            height="28"
            loading="lazy"
            src="/admios-logo.svg"
            style="color: transparent;"
            width="112"
          />
        </a>
        <a
          aria-expanded="false"
          aria-label="menu"
          class="navbar-burger"
          data-target="main-navbar-inner"
          role="button"
        >
          <span
            aria-hidden="true"
          />
          <span
            aria-hidden="true"
          />
          <span
            aria-hidden="true"
          />
        </a>
      </div>
      <div
        class="navbar-menu"
        id="main-navbar-inner"
      >
        <div
          class="navbar-start"
        >
          <a
            class="navbar-item"
            href="/"
          >
            My Boards
          </a>
          <a
            class="navbar-item"
          >
            Add State
          </a>
        </div>
        <div
          class="navbar-end"
        >
          <div
            class="navbar-item"
          >
            Username: 
            test
          </div>
          <a
            class="navbar-item"
          >
            Logout
          </a>
        </div>
      </div>
    </nav>
    <div
      class="columnList content"
    >
      <div
        class="card emptyContent"
      >
        <header
          class="card-header"
        >
          <p
            class="card-header-title"
          >
            Your Workspace is empty!
          </p>
        </header>
        <div
          class="card-content"
        >
          <div
            class="content"
          >
            <p>
              You can create your first column below.
            </p>
          </div>
        </div>
        <footer
          class="card-footer"
        >
          <a
            class="card-footer-item"
          >
            Create Column
          </a>
        </footer>
      </div>
    </div>
    <div
      aria-labelledby="add-state-modal-title"
      class="modal"
      role="dialog"
    >
      <div
        class="modal-background"
      />
      <div
        class="modal-card"
      >
        <header
          class="modal-card-head"
        >
          <p
            class="modal-card-title"
            id="add-state-modal-title"
          >
            Add State
          </p>
          <button
            aria-label="close"
            class="delete"
          />
        </header>
        <section
          class="modal-card-body"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              Name:
            </label>
            <div
              class="control"
            >
              <input
                class="input is-danger"
                type="text"
                value=""
              />
            </div>
            <p
              class="help is-danger"
            >
              Name is required.
            </p>
          </div>
        </section>
        <footer
          class="modal-card-foot"
        >
          <div
            class="buttons"
          >
            <button
              class="button"
            >
              Close
            </button>
            <button
              class="button is-success"
              disabled=""
            >
              Add State
            </button>
          </div>
        </footer>
      </div>
    </div>
    <div
      aria-labelledby="add-task-modal-title"
      class="modal"
      role="dialog"
    >
      <div
        class="modal-background"
      />
      <div
        class="modal-card"
      >
        <header
          class="modal-card-head"
        >
          <p
            class="modal-card-title"
            id="add-task-modal-title"
          >
            Add Task
          </p>
          <button
            aria-label="close"
            class="delete"
          />
        </header>
        <section
          class="modal-card-body"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              Name:
            </label>
            <div
              class="control"
            >
              <input
                class="input"
                type="text"
                value=""
              />
            </div>
            <p
              class="help is-danger"
            >
              Task is required.
            </p>
          </div>
        </section>
        <footer
          class="modal-card-foot"
        >
          <div
            class="buttons"
          >
            <button
              class="button"
            >
              Close
            </button>
            <button
              class="button is-success"
              disabled=""
            >
              Add Task
            </button>
          </div>
        </footer>
      </div>
    </div>
    <div
      aria-labelledby="edit-task-modal-title"
      class="modal"
      role="dialog"
    >
      <div
        class="modal-background"
      />
      <div
        class="modal-card"
      >
        <header
          class="modal-card-head"
        >
          <p
            class="modal-card-title"
            id="edit-taskmodal-title"
          >
            Edit Task
          </p>
          <button
            aria-label="close"
            class="delete"
          />
        </header>
        <section
          class="modal-card-body"
        >
          <div
            class="field"
          >
            <label
              class="label"
            >
              Name:
            </label>
            <div
              class="control"
            >
              <input
                class="input"
                type="text"
                value=""
              />
            </div>
            <p
              class="help is-danger"
            >
              Text is required.
            </p>
          </div>
        </section>
        <footer
          class="modal-card-foot"
        >
          <div
            class="buttons"
          >
            <button
              class="button"
            >
              Close
            </button>
            <button
              class="button is-success"
              disabled=""
            >
              Edit Task
            </button>
          </div>
        </footer>
      </div>
    </div>
  </section>
</div>
`;
